Сборка под MacOS

--- a/_4.OPCUA/CMakeLists.txt
+++ b/_4.OPCUA/CMakeLists.txt
@@ -10,6 +10,9 @@ if (WIN32)
     set(OPCUA_SOURCES windows/open62541.c windows/open62541.h)
     set(OPCUA_LIBRARIES ws2_32 iphlpapi)
     target_link_libraries(${PROJECT_NAME} ws2_32 iphlpapi)
+elseif (APPLE)
+    include_directories(apple)
+    set(OPCUA_SOURCES apple/open62541.c apple/open62541.h)
 elseif (UNIX)
     include_directories(unix)
     set(OPCUA_SOURCES unix/open62541.c unix/open62541.h)
